# rust-tauri-multiplatform-compressor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
legacy/: calculator.html
scripts/: gen-icon.mjs
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compressor.rs  crawler.rs  fs_utils.rs  history.rs  job.rs  lib.rs  library.rs  main.rs
