[package]
name = "game-compressor"
version = "0.1.0"
description = "Transparent on-the-fly game folder compression for Windows (WOF/NTFS), macOS (decmpfs) and Linux (Btrfs)"
authors = ["Game Compressor"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "game_compressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
walkdir = "2.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
